--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>sistema para el control educativo</title>
 <link rel="icon" type="image/jpg" href="img/favicon.png" />
-<link rel="stylesheet" href="css/estilo1.css" />
+<link rel="stylesheet" href="css/estiloindex.css" />
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
@@ -20,9 +20,9 @@
 			</p>
 		</div>
 		
-	        <a href="FormularioAlum.html"><img src="img/alum.jpg" class="alum">
+	        <a href="FormularioAlum.html"><img src="img/alum.jpg" class="alum">    
 			</a>
-			<a href="FormularioProf.html"><img src="img/profesor.jpg" class="prof">
+			<a href="#"><img src="img/profesor.jpg" class="prof">
 			</a>
 	</div>			
 	
