Ajustes y plantilla de API

--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+	PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>sistema para el control educativo</title>
-<link rel="icon" type="image/jpg" href="img/favicon.png" />
-<link rel="stylesheet" href="css/estiloindex.css" />
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+	<title>sistema para el control educativo</title>
+	<link rel="icon" type="image/jpg" href="img/favicon.png" />
+	<link rel="stylesheet" href="css/estiloindex.css" />
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
+
 <body>
-	
+
 	<div class="fondo">
-        <div class="textprof">
-		    <p>Realiza un registro para tener acceso, facilitando el trabajo en el aula. Organiza, programa y envía información a los alumnos.
+		<div class="textprof">
+			<p>Realiza un registro para tener acceso, facilitando el trabajo en el aula. Organiza, programa y envía
+				información a los alumnos.
 			</p>
 		</div>
 		<div class="textalum">
-			<p>Obten información en cualquier momento, sobre calificaciones, horarios, tareas, asistencia, materias y otra información escolar.
+			<p>Obten información en cualquier momento, sobre calificaciones, horarios, tareas, asistencia, materias y
+				otra información escolar.
 			</p>
 		</div>
-		
-	        <a href="FormularioAlum.html"><img src="img/alum.jpg" class="alum">    
-			</a>
-			<a href="#"><img src="img/profesor.jpg" class="prof">
-			</a>
-	</div>			
-	
-	<hr></hr>
+
+		<a href="FormularioAlum.html"><img src="img/alum.jpg" class="alum">
+		</a>
+		<a href="#"><img src="img/profesor.jpg" class="prof">
+		</a>
+	</div>
+
+	<hr>
+	</hr>
 	<div class="mov">
 		<div id="cover-texto">
-		</div>	
-	</div>
-		<div class="logo">
 		</div>
-			
+	</div>
+	<div class="logo">
+	</div>
+
 </body>
+
 </html>
