--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<a href="FormularioAlum.html"><img src="img/alum.jpg" class="alum">
 		</a>
-		<a href="#"><img src="img/profesor.jpg" class="prof">
+		<a href="FormularioProf.html"><img src="img/profesor.jpg" class="prof">
 		</a>
 	</div>
 
